add tab component

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "cube-ui": "~1.12.1",
+    "cube-ui": "^1.12.6",
     "vue": "^2.5.17"
   },
   "devDependencies": {
